<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:paddingHorizontal="15dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/love2"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/love_calculator"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/light_black"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/firstNameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edit"
        android:padding="10dp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="@color/light_black"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/secondNameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_edit"
        android:padding="10dp"
        tools:ignore="Autofill,LabelFor,TextFields" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBtn"
        android:layout_width="200dp"
        android:layout_gravity="center"
        app:cornerRadius="20dp"
        android:padding="12dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/light_black"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculate" />


</LinearLayout>